# ChangeLog for app-admin/mcollective
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  12 Jan 2011; Lance Albertson <ramereth@gentoo.org>
  files/mcollectived.initd:
  Fix init script to work properly.

*mcollective-1.0.0 (06 Jan 2011)

  06 Jan 2011; Lance Albertson <ramereth@gentoo.org>
  -mcollective-0.4.5.ebuild, -mcollective-0.4.6.ebuild,
  -mcollective-0.4.7.ebuild, +mcollective-1.0.0.ebuild:
  Version bump, update SRC_URI to new location, cleanup

*mcollective-0.4.7 (30 Jun 2010)

  30 Jun 2010; Lance Albertson <ramereth@gentoo.org>
  +mcollective-0.4.7.ebuild:
  Version bump

  16 Jun 2010; Lance Albertson <ramereth@gentoo.org>
  mcollective-0.4.6.ebuild:
  Optionally install client binaries but enabled by default

*mcollective-0.4.6 (14 Jun 2010)

  14 Jun 2010; Lance Albertson <ramereth@gentoo.org>
  +mcollective-0.4.6.ebuild:
  mcollective: version bump

  10 Jun 2010; Lance Albertson <ramereth@gentoo.org>
  mcollective-0.4.5.ebuild, files/mcollectived.initd:
  Adjust installs paths to match upstream and fix init script

*mcollective-0.4.5 (08 Jun 2010)

  08 Jun 2010; Lance Albertson <ramereth@gentoo.org>
  -mcollective-0.4.2.ebuild, -mcollective-0.4.3.ebuild,
  -mcollective-0.4.4.ebuild, +mcollective-0.4.5.ebuild:
  version bump, switch to ruby-ng.eclass

*mcollective-0.4.4 (21 Apr 2010)

  21 Apr 2010; Lance Albertson <ramereth@gentoo.org>
  +mcollective-0.4.4.ebuild:
  Version bump

*mcollective-0.4.3 (25 Jan 2010)

  25 Jan 2010; Lance Albertson <ramereth@gentoo.org>
  +mcollective-0.4.3.ebuild:
  Version bump

  19 Jan 2010; Lance Albertson <ramereth@gentoo.org>
  mcollective-0.4.2.ebuild, files/mcollectived.initd:
  Fix restart in the init script. Add informative bits after the package is
  merged.

*mcollective-0.4.2 (18 Jan 2010)

  18 Jan 2010; Lance Albertson <ramereth@gentoo.org>
  +mcollective-0.4.2.ebuild, +files/mcollectived.initd, +metadata.xml:
  Initial ebuild
