@@ -2,16 +2,14 @@
 Hash: SHA1
 
 AUX mcollectived.initd 511 RMD160 38009369d324f8c4864f7602b35466ddffef9736 SHA1 01b023ac268fc44fe6d601d749090a6fbca90d43 SHA256 45336a2eb3076e69b34de56135f08578753e032f2a73c8d3ab63345ab6cbbf68
-DIST mcollective-0.4.9.tgz 154953 RMD160 182e2f3646577e6c14b389c8b69ab4fe797cf5b0 SHA1 742635c226c6923e963b29ed3217f4399d5a8ede SHA256 4e14c727101974c017e37cbcdab5ad6e949aa60fd3b13e2aa3fd6270f71531cf
-DIST mcollective-1.0.0.tgz 161994 RMD160 008da56b6cc31e13f46664dff74acb9134393371 SHA1 79fa408c0c755d10e39c5165a603bde1a3b79549 SHA256 5ef6d0f7fc11c519f4d424b4452483ffd138b40ee6c4f114bc75b6acb521e27c
-EBUILD mcollective-0.4.9.ebuild 1486 RMD160 41da6f3f7e81f52a7e4261840e0f082966d69ec6 SHA1 7cef712d21069844e3053a9bba24a3c4690aa5d4 SHA256 f70d2fc2af5868ddb0616679b0c77423ce95e20686516c69aa276b68383c8a23
-EBUILD mcollective-1.0.0.ebuild 1490 RMD160 fb95d931a902929ed316544aa28e68d095afb7d5 SHA1 ca8bf971df85e8d84bd28bf94eafd465aff75d04 SHA256 c72a1cf285ecefbb7f396b47542b624bd8c044166b30fc57b7ab81e8e5c712ad
-MISC ChangeLog 1960 RMD160 d03b97deeaa12ed1b5095e114bd2a0cdcf97ee07 SHA1 0a0526e0143ddb6bb86060eeefff61af541f29ce SHA256 60e031cbb618a6b27b5469085986241afa82319e83701fa04792a1ec2050e241
+DIST mcollective-1.0.1.tgz 169558 RMD160 2443c462db91f6d9af1840f65c49024b293280f3 SHA1 eda65ff7d38b97714ae2bf8b49ffaf8d6a9bd571 SHA256 4dec52151faedd2baa1226102237b894864716d200cb330274c21cc5981e80cb
+EBUILD mcollective-1.0.1.ebuild 1490 RMD160 fb95d931a902929ed316544aa28e68d095afb7d5 SHA1 ca8bf971df85e8d84bd28bf94eafd465aff75d04 SHA256 c72a1cf285ecefbb7f396b47542b624bd8c044166b30fc57b7ab81e8e5c712ad
+MISC ChangeLog 2156 RMD160 423d0080e58374bcdf6e453f8e525100b0ad789c SHA1 f1181bb7cf495d0ad5238e2ce48f5ac916c559f5 SHA256 f3aedd6f546c72a7f0cb92bc7ae0259a137e27bc9084e17087f5da08f54f9eaa
 MISC metadata.xml 463 RMD160 a93c627ae1a9f8b759ced1af615f7c147f49aa43 SHA1 3bc03dd891a3ceb567aace896b9cfe64771cbf8b SHA256 ea5db5c13ed2012181b5dfbb2170a24bc67c9b6f7b2d6de8b934a27ee4a7f1b1
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.16 (GNU/Linux)
 
-iD8DBQFNLPNTQW+hXSf0t0IRAllRAKDr2PWlStU82lmvv+c/T9qTuQEXCQCg4VP8
-cOBIng9fswURsP+Ya0LQawY=
-=+KAp
+iD8DBQFNbFO5QW+hXSf0t0IRAhSVAKC3Yk561P2hss3+8zSDdbKU8pwMkACghvvj
+gX0aopawgtAiucX5IZiuyTU=
+=9/uM
 -----END PGP SIGNATURE-----
